# Cpp

./: .gitignore  C++Projects.txt  VsCode-Ubuntu-CannotStartGUItxt
Book-CppPrimerPlus/Chapter-03/: 2-TestReference.cpp
Book-CppPrimerPlus/Chapter-10/Stock/: Main.cpp  Stock00.h
Book-CppPrimerPlus/Chapter-11/Time/: MyTime0.h  UseMyTime0.cpp
Book-CppPrimerPlus/Chapter-11/Vector/: RandomWalk.cpp  Vector.cpp
Book-CppPrimerPlus/Chapter-12/: Chapter-12-Summary
Book-CppPrimerPlus/Chapter-12/Queue/: Queue.cpp  Queue.hpp
Book-CppPrimerPlus/Chapter-12/String/: String.cpp  String.hpp  UseString1.cpp
Book-CppPrimerPlus/Chapter-12/StringBad/: StringBad.cpp
Book-CppPrimerPlus/Chapter-12/StringTest/: Makefile  StringTest.cpp
Book-CppPrimerPlus/Chapter-12/TestReference/: Test.cpp
Book-CppPrimerPlus/Chapter-13/1-TableTennisPlayer/: Makefile  TableTennisPlayer.cpp  TableTennisPlayer.hpp  TestTTP.cpp
Book-CppPrimerPlus/Chapter-13/2-BrassBankAccount/: Makefile  UseBrass.cpp
Book-CppPrimerPlus/Chapter-14/2-Private-Inheritance/: Makefile  Student.cpp
Book-CppPrimerPlus/Chapter-14/3-MultiInheritance/: MI.hpp  Makefile
Book-CppPrimerPlus/Chapter-14/4-Template-NormalStack/: NormalStack.hpp
Book-CppPrimerPlus/Chapter-15/1-UnwindingStack/: Main.cpp
Book-CppPrimerPlus/Chapter-15/2-Execeptions/: 1-ExeceptionBasic.cpp  3-StdExeception.cpp  Exeception.txt
Book-CppPrimerPlus/Chapter-16/1-SmartPointer/: 1-SmartPointerBaisc.cpp  2-SmartPointerwithMove.cpp
Book-CppPrimerPlus/Chapter-18/01-Wrapper/: Main.cpp
Book-CppPrimerPlus/Topics/: TestEnumStruct.cpp
Book-CppPrimerPlus/Topics/RValueReference/: 2-Basic.cpp
C++_Concurrency/: 1-SimpleThread.cpp  1-Simplest-HelloWorld.cpp  10-1-RAII-LockGuard.cpp  10-2-RAII-UniqueLock.cpp  11-1-SingleWriter-MultiReader-Exclusive.cpp  11-1-SingleWriter-MultiReader.cpp  11-2-SingleWriter-MultiReader-Shared.cpp  13-1-DeadLock-PhilosopherDinningExample.cpp  13-2-DeadLock-PhilosopherDinning-Solve.cpp  14-1-LiveLock-PhilosopherDinning.cpp  15-1-ThreadSynchronization-NoLock.cpp  15-2-ThreadSync-WithLock.cpp  15-3-ThreadSync-CondiVar.cpp  15-4-ThreadSync-CondiVar-WithPredicate.cpp  15-5-ThreadSync-CondiVar-WithPredicate-MultiTh.cpp  15-6-ThreadSync-DownloaderExample.cpp  16-1-MultiThreadIncrement.cpp  16-2-MultiThreadIncrement-Atomic.cpp  17-1-AtomicBasic.cpp  18-1-AsyncProg-PackagedTask-Sync.cpp  18-2-AsyncProg-PackagedTask-Async.cpp  18-3-AsyncProg-async.cpp  19-1-Parallel-Async.cpp  19-2-ExePolicySeq.cpp  19-3-ExePolicyPar.cpp  2-1-SimplestJoin.cpp  2-2-ThreadWithClassMemberFunction.cpp  2-3-ThreadinClassMemberFunction.cpp  2-SleepAndThreadID.cpp  20-1-ConcurrentOnVector.cpp  3-1-Thread-WithLValueArgument.cpp  3-2-Thread-WithRValueArgument.cpp  3-3-Thread-WithReferrenceArgument.cpp  3-4-Thread-WithPointerArgument.cpp  4-Native_Handle.cpp  5-GetID.cpp  6-ThreadSleep.cpp  7-1-ThreadAsFunctionArgument.cpp  7-2-ThreadAsFunctionReturn.cpp  8-1-Thread-ChildWithExeception.cpp  (+15 more)
C++_Concurrency/12-1-Singleton/Basic/: Main.cpp  Singleton.cpp
C++_Concurrency/12-1-Singleton/ThreadSafe-Improve/: Main.cpp  Singleton.cpp  Singleton.hpp
C++_Concurrency/12-1-Thread-Safe-SharedLocalData/Thread-Not-Safe/: Singleton.cpp  Singleton.hpp
C++_Concurrency/12-1-Thread-Safe-SharedLocalData/Thread-Safe-CallOnce/: Main.cpp
C++_Concurrency/12-1-Thread-Safe-SharedLocalData/Thread-Safe-DoubleLock-C++17/: Main-CompileWithC++17.cpp
C++_Concurrency/12-1-Thread-Safe-SharedLocalData/Thread-Safe-MeyerSingleton/: Singleton.cpp  Singleton.hpp
C++_Topics/RValueReference/: 1-NormalStack.cpp  1-RValueRefBasic.txt  2-ExtendLifeSpan.cpp  3-Holder-withRvalueRef.cpp  3-ModifyRValue.cpp  4-AsFuncOverLoadArgument.cpp  5-UseMoveForArgument.cpp  HolderBasic.cpp
CMake/: CMakeLists.txt  CMake_Project_Structure.txt  HelloWorld.cpp  Knowledge-1.txt
CMake/1-HelloWorld/: CMakeLists.txt  HelloWorld.cpp
CMake/2-SimpleLibrary/: CMakeLists.txt
CMake/2-TestSimpleLibrary/: CMakeLists.txt  main.cpp
CMake/3-CMakeProjectStructure/: CMakeLists.txt
CMake/3-CMakeProjectStructure/Src/: CMakeLists.txt
CMake/4-VariableandOption/: CMakeLists.txt
CMake/4-VariableandOption/App/: CMakeLists.txt  main.cpp
CMake/4-VariableandOption/Src/: CMakeLists.txt
CppPrimerPlus/10-1-TestConstructor/: Main.cpp  TestConstructor.cpp  TestConstructor.hpp
CppPrimerPlus/Chapter-03/: 1-BasicIO.cpp  3-TestDoublePointer.cpp
CppPrimerPlus/Chapter-10/Stock/: Makefile  Stock.cpp
CppPrimerPlus/Chapter-11/Time/: Makefile  MyTime0.cpp
CppPrimerPlus/Chapter-11/Vector/: Makefile  Vector.hpp
CppPrimerPlus/Chapter-12/Queue/: Makefile  QueueSim.cpp
CppPrimerPlus/Chapter-12/String/: Makefile
CppPrimerPlus/Chapter-12/StringBad/: Makefile  StringBad.hpp  UsingSB.cpp
CppPrimerPlus/Chapter-12/StringTest/: StringTest.hpp  UsingTest.cpp
CppPrimerPlus/Chapter-13/2-BrassBankAccount/: Brass.cpp  Brass.hpp
CppPrimerPlus/Chapter-14/2-Private-Inheritance/: Main.cpp  Student.hpp
CppPrimerPlus/Chapter-14/3-MultiInheritance/: MI.cpp  Main.cpp
CppPrimerPlus/Chapter-14/4-Template-NormalStack/: Main.cpp
CppPrimerPlus/Chapter-15/2-Execeptions/: 2-CatchAllHandler.cpp  4-ReThrowException.cpp  Exeception.txt
CppPrimerPlus/Chapter-16/1-SmartPointer/: 2-SmartPointerwithMove.cpp  3-ProblemOfAutoPtr.txt
CppPrimerPlus/Chapter-18/01-Wrapper/: MethodDefine.hpp
ImageProcessing/: Basic.txt
ImageProcessing/BuildOpenCV_Ubuntu/: OpenCV-Ubuntu20.04-InstallProcedure.txt  VerifyOpenCVInstalled.txt
Unit_Test/: 1-MinimalTestFrame.cpp  2-Assertions.cpp  3-1-TestWithoutTestFixture.cpp  3-2-TestWithTestFixture.cpp  Knowledge.txt
Unit_Test/4-1-GMockBasic/: A.h  A_Test.cpp  Database.h  MockDatabase.h
Unit_Test/5-1-GMockBasic/: 5-1-FoolInterface.hpp  5-1-FoolTestMain.cpp  5-1-MockFoolInterface.hpp
